2001-06-20  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSTask.m: handleSignal() ... reset signal handler for
	systems that don't have BSD signal semantics.
	Report by jan trembulak
	* Source/GSString.m: getCString_c(), getCString_u() reverse logic
	of returning remaining range ... report by Michael Scheibler

2001-06-15  Adam Fedor  <fedor@gnu.org>

	* Version: 1.0.2

2001-06-15  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSFileManager.m: ([-removeFileAtpath:handler:])
	Check for illegal paths as specified in the MacOS-X documentation.
	* Source/Makefile.postamble: Update to rebuild files for XML and SSL
	support when config.h changes.

2001-06-14  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSuserDefaults.m: Fix +resetUserDefaults to retain the
        NSRegistrationDomain information ... was losing it when this method
        was called in response to the user name being initially set.
        ([-registerDefaults:]) fix for when no dictionary found.
        Use NSLanguages rather than Languages as key for the languages list.
	* Source/NSUser.m: GSSetUserName() ... only reset the user defaults
	if the name is actually changed - and not if it is being initialised.
	When standardUserDefaults are first obtained, the user name should be
	initialised as part of that process anyway.
        * Source/NSFileManager.m: ([-removeFileAtpath:handler:])
        Fix this method so it *doesn't* follow symbolic links.
        This makes it conform to the documentation and prevents
        accidental removal of entire directory hierarchies!

Wed Jun 13 19:43:16 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSFileManager.m
	([-createSymbolicLinkAtPath:pathContent:]): Fixed - the call to
	symlink was using old path instead of new path and viceversa.
	
2001-06-12  Adam Fedor  <fedor@gnu.org>

	* Documentation/news.texi: Update

	* Documentation/gsdoc/NSArray.gsdoc: Updates (from
        Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>).
